[workspace]
members = ["fuzzy", "fuzzy_cli"]

[workspace.package]
authors = ["Sam Roberts"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/SamRoberts/fuzzy_rust"
license = "MIT"
license-file = "LICENSE"
publish = false # don't publish anywhere, for now

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.4.3", features = ["derive"] }
regex-syntax = "0.7.5"
thiserror = "1.0.48"
fuzzy = { path = "fuzzy" }
