[package]
name = "fuzzy"
description = "Fuzzy finds the optimal inexact match between a regex-like pattern and a text"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-syntax.workspace = true
thiserror.workspace = true
