[package]
name = "fuzzy_cli"
description = "The Fuzzy program finds the optimal inexact match between a regex-like pattern and a text"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
fuzzy.workspace = true
clap.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
