[package]
name = "fuzzy_lambda"
description = "Fuzzy running in a Lambda"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
fuzzy.workspace = true

lambda_http.workspace = true
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
